--- a/bibliography.bib
+++ b/bibliography.bib
@@ -354,3 +354,20 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2017MNRAS.465.1454H},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+@ARTICLE{2020MNRAS.491.4768R,
+       author = {{Rau}, Markus Michael and {Wilson}, Simon and {Mandelbaum}, Rachel},
+        title = "{Estimating redshift distributions using hierarchical logistic Gaussian processes}",
+      journal = {\mnras},
+     keywords = {catalogues, surveys, galaxies: distances and redshifts, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2020,
+        month = feb,
+       volume = {491},
+       number = {4},
+        pages = {4768-4782},
+          doi = {10.1093/mnras/stz3295},
+archivePrefix = {arXiv},
+       eprint = {1904.09988},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020MNRAS.491.4768R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
