--- a/nzmarg.tex
+++ b/nzmarg.tex
@@ -352,7 +352,7 @@ Prior to the sampling of the marginalised likelihood we test whether we can repr
 \centering
 \includegraphics[scale=0.3]{plots/30.png}
 \caption{Comparison of redshift distribution calibrated with input data histograms with bin width of $\Delta z = 0.05$ and $\Delta z = 0.025$ {\color{red} change legend!}}
-\label{fig:comb}
+\label{fig:comb_histogram_comparison}
 \end{figure}
 \begin{table}
 \label{tab:redshift_calibration}
